--- a/Alicargo/Areas/Admin/Views/Shared/EditorTemplates/BankDetails.cshtml
+++ b/Alicargo/Areas/Admin/Views/Shared/EditorTemplates/BankDetails.cshtml
@@ -1,4 +1,4 @@
-﻿@model Alicargo.Core.Contracts.Calculation.BillSettings
+﻿@model Alicargo.Areas.Admin.Models.BankDetails
 <div class="bank-details">
 	<table>
 		<tr>
