--- a/Alicargo/Areas/Admin/Views/BillSettings/EditorTemplates/BillSettingsModel.cshtml
+++ b/Alicargo/Areas/Admin/Views/BillSettings/EditorTemplates/BillSettingsModel.cshtml
@@ -16,14 +16,17 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="span4">
+			<div class="span3">
 				@Html.EditorWithLabelFor(x => x.Head)
 			</div>
-			<div class="span4">
+			<div class="span3">
 				@Html.EditorWithLabelFor(x => x.Accountant)
 			</div>
-			<div class="span4">
+			<div class="span3">
 				@Html.EditorWithLabelFor(x => x.VAT)
+			</div>
+			<div class="span3">
+				@Html.EditorWithLabelFor(x => x.EuroToRuble)
 			</div>
 		</div>
 	</div>
