added BillManager set number for bill

--- a/Alicargo/Areas/Admin/Views/Bill/Preview.cshtml
+++ b/Alicargo/Areas/Admin/Views/Bill/Preview.cshtml
@@ -21,7 +21,7 @@
 					<td style="width: 100%"><div class="textedit-holder">@Html.TextAreaFor(x => x.Shipper)</div></td>
 				</tr>
 				<tr>
-					<td class="info">@Html.LabelFor(x => x.Shipper, "Покупатель")</td>
+					<td class="info">@Html.LabelFor(x => x.Client, "Покупатель")</td>
 					<td style="width: 100%"><div class="textedit-holder">@Html.TextAreaFor(x => x.Client)</div></td>
 				</tr>
 			</table>
