--- a/Alicargo/Areas/Admin/Views/Bill/Preview.cshtml
+++ b/Alicargo/Areas/Admin/Views/Bill/Preview.cshtml
@@ -1,5 +1,4 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
-@using Alicargo.Utilities
 @using Resources
 @model Alicargo.Areas.Admin.Models.BillModel
 
@@ -32,7 +31,7 @@
 					<td>Товары (работы, услуги)</td>
 					<td style="width: 50px;">Кол-во</td>
 					<td style="width: 20px">Ед.</td>
-					<td class="narrow">Цена</td>
+					<td class="narrow">Цена (руб.)</td>
 				</tr>
 				<tr>
 					<td><div class="textedit-holder">@Html.TextAreaFor(x => x.Goods)</div></td>
