--- a/Alicargo/Areas/Admin/Views/Bill/Preview.cshtml
+++ b/Alicargo/Areas/Admin/Views/Bill/Preview.cshtml
@@ -62,7 +62,7 @@
 				<text>
 					Счет отправлен:
 				</text>
-				@ViewBag.SendDate.ToString()
+				@ViewBag.SendDate.ToString("d")
 			}
 		</div>
 		@Html.ValidationSummary(false)
