edit new bill settings

--- a/Alicargo/Areas/Admin/Views/BillSettings/EditorTemplates/BillSettingsModel.cshtml
+++ b/Alicargo/Areas/Admin/Views/BillSettings/EditorTemplates/BillSettingsModel.cshtml
@@ -29,5 +29,13 @@
 				@Html.EditorWithLabelFor(x => x.EuroToRuble)
 			</div>
 		</div>
+		<div class="row">
+			<div class="span4">
+				@Html.EditorWithLabelFor(x => x.AutoUpdatePeriodHours)
+			</div>
+			<div class="span8">
+				@Html.EditorWithLabelFor(x => x.SourceUrl)
+			</div>
+		</div>
 	</div>
 </div>
