--- a/Alicargo/Areas/Admin/Views/State/Index.cshtml
+++ b/Alicargo/Areas/Admin/Views/State/Index.cshtml
@@ -2,7 +2,7 @@
 @using Resources
 <p>
 	<b>@Pages.States</b>
-	@Html.ActionLink(Pages.Add, MVC.State.Create())
+	@Html.ActionLink(Pages.Add, MVC.Admin.State.Create())
 </p>
 <div id="state-grid" class="grid"></div>
 @section scripts
