--- a/Alicargo/Areas/Admin/Views/State/Edit.cshtml
+++ b/Alicargo/Areas/Admin/Views/State/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@using Alicargo.Mvc
 @using Alicargo.MvcHelpers.Extensions
 @using Resources
-@model Alicargo.ViewModels.State.StateEditModel
+@model Alicargo.Areas.Admin.Models.State.StateEditModel
 <div class="container-edit">
 	<h1>
 		@Pages.StateEdit
 	</h1>
-	@Html.EditPage(Url.Action(MVC.State.Edit()), Pages.Save)
+	@Html.EditPage(Url.Action(MVC.Admin.State.Edit()), Pages.Save)
 	@section scripts
 {
 		@Scripts.Render(JsPaths.StateEditJs)
