--- a/Alicargo/Areas/Admin/Views/State/EditorTemplates/StateEditModel.cshtml
+++ b/Alicargo/Areas/Admin/Views/State/EditorTemplates/StateEditModel.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Alicargo.MvcHelpers.Extensions
-@model Alicargo.ViewModels.State.StateEditModel
+@model Alicargo.Areas.Admin.Models.State.StateEditModel
 
 <div class="state-edit">
 	@Html.HiddenFor(x => x.Id)
