--- a/Alicargo/Views/Shared/Memu.cshtml
+++ b/Alicargo/Views/Shared/Memu.cshtml
@@ -48,7 +48,7 @@
 		<li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown">@Pages.Settings<b class="caret"></b></a>
 			<ul class="dropdown-menu">
-				<li>@Html.ActionLink(Pages.States, MVC.State.Index())</li>
+				<li>@Html.ActionLink(Pages.States, MVC.Admin.State.Index())</li>
 				<li>@Html.ActionLink(Pages.Templates, MVC.EmailTemplate.Index())</li>
 				<li>@Html.ActionLink(Pages.Cities, MVC.City.Index())</li>
 				<li>@Html.ActionLink(Pages.Countries, MVC.Country.Index())</li>
@@ -78,7 +78,7 @@
 		<li class="dropdown">
 			<a href="#" class="dropdown-toggle" data-toggle="dropdown">@Pages.Settings<b class="caret"></b></a>
 			<ul class="dropdown-menu">
-				<li>@Html.ActionLink(Pages.States, MVC.State.Index())</li>
+				<li>@Html.ActionLink(Pages.States, MVC.Admin.State.Index())</li>
 				<li>@Html.ActionLink(Pages.Templates, MVC.EmailTemplate.Index())</li>
 				<li>@Html.ActionLink(Pages.Cities, MVC.City.Index())</li>
 				<li>@Html.ActionLink(Pages.Countries, MVC.Country.Index())</li>
