removed files from awb models

--- a/Alicargo/Views/ApplicationList/AdminDetails.cshtml
+++ b/Alicargo/Views/ApplicationList/AdminDetails.cshtml
@@ -193,7 +193,7 @@
 	# for(var i in InvoiceFiles) { #
 	# var item = InvoiceFiles[i]; #
 	# if(!item || !item.Id) continue; #
-	<a href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
+	<a href="@Url.Action(MVC.ApplicationFiles.Download())/#=item.Id#">#= item.Name #</a>
 	# } #
 </p>
 # } #
@@ -203,7 +203,7 @@
 	# for(var i in SwiftFiles) { #
 	# var item = SwiftFiles[i]; #
 	# if(!item || !item.Id) continue; #
-	<a href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
+	<a href="@Url.Action(MVC.ApplicationFiles.Download())/#=item.Id#">#= item.Name #</a>
 	# } #
 </p>
 # } #
@@ -213,7 +213,7 @@
 	# for(i in DeliveryBillFiles) { #
 	# var item = DeliveryBillFiles[i]; #
 	# if(!item || !item.Id) continue; #
-	<a href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
+	<a href="@Url.Action(MVC.ApplicationFiles.Download())/#=item.Id#">#= item.Name #</a>
 	# } #
 </p>
 # } #
@@ -223,7 +223,7 @@
 	# for(i in Torg12Files) { #
 	# var item = Torg12Files[i]; #
 	# if(!item || !item.Id) continue; #
-	<a href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
+	<a href="@Url.Action(MVC.ApplicationFiles.Download())/#=item.Id#">#= item.Name #</a>
 	# } #
 </p>
 # } #
@@ -233,7 +233,7 @@
 	# for(i in CPFiles) { #
 	# var item = CPFiles[i]; #
 	# if(!item || !item.Id) continue; #
-	<a href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
+	<a href="@Url.Action(MVC.ApplicationFiles.Download())/#=item.Id#">#= item.Name #</a>
 	# } #
 </p>
 # } #
@@ -243,7 +243,7 @@
 	# for(i in PackingFiles) { #
 	# var item = PackingFiles[i]; #
 	# if(!item || !item.Id) continue; #
-	<a href="@Url.Action(MVC.Files.Download())/#=item.Id#">#= item.Name #</a>
+	<a href="@Url.Action(MVC.ApplicationFiles.Download())/#=item.Id#">#= item.Name #</a>
 	# } #
 </p>
 # } #
