--- a/Alicargo/Views/ClientApplication/Edit.cshtml
+++ b/Alicargo/Views/ClientApplication/Edit.cshtml
@@ -6,5 +6,5 @@
 		@Pages.ApplicationEdit @ViewBag.ApplicationNumber
 	</h1>
 	@Html.EditPage(Url.Action(MVC.ClientApplication.Edit()), Pages.Update,
-	Html.ActionLink(Pages.Files, MVC.Files.ClientApplication((long)ViewBag.ApplicationId), new { @class = "btn btn-info" }))
+	Html.ActionLink(Pages.Files, MVC.ApplicationFiles.ClientApplication((long)ViewBag.ApplicationId), new { @class = "btn btn-info" }))
 </div>
