--- a/Alicargo/Views/ApplicationFiles/AdminApplication.cshtml
+++ b/Alicargo/Views/ApplicationFiles/AdminApplication.cshtml
@@ -6,28 +6,32 @@
 		@Pages.Application @ViewBag.ApplicationId
 	</h1>
 	<div class="row">
-		<div class="span4">
+		<div class="span3">
 			@Html.Partial("FilesHolder", ApplicationFileType.Invoice)
 		</div>
-		<div class="span4">
+		<div class="span3">
 			@Html.Partial("FilesHolder", ApplicationFileType.CP)
 		</div>
-		<div class="span4">
+		<div class="span3">
 			@Html.Partial("FilesHolder", ApplicationFileType.DeliveryBill)
+		</div>
+		<div class="span3">
+			@Html.Partial("FilesHolder", ApplicationFileType.Other)
 		</div>
 	</div>
 	<br />
 	<div class="row">
-		<div class="span4">
+		<div class="span3">
 			@Html.Partial("FilesHolder", ApplicationFileType.Packing)
 		</div>
-		<div class="span4">
+		<div class="span3">
 			@Html.Partial("FilesHolder", ApplicationFileType.Swift)
 		</div>
-		<div class="span4">
+		<div class="span3">
 			@Html.Partial("FilesHolder", ApplicationFileType.Torg12)
 		</div>
 	</div>
+	<br />
 	<p>
 		<a href="@Url.Action(MVC.Application.Edit((long) ViewBag.ApplicationId))" class="btn btn-primary">@Pages.ApplicationEdit</a>
 	</p>
