--- a/Alicargo/Views/AirWaybill/AdminDetails.cshtml
+++ b/Alicargo/Views/AirWaybill/AdminDetails.cshtml
@@ -3,40 +3,74 @@
 
 <div class='grid-details'>
 	<div class="properties">
-		# if(InvoiceFileName != null){ #
+		# if(AWBFiles != null){ #
 		<p>
 			<span>@Entities.Invoice:</span>
-			<a href="@Url.Action(MVC.AwbFile.Invoice())/#= Id #">#= InvoiceFileName #</a>
+			# for(i in AWBFiles) { #
+			# var item = AWBFiles[i]; #
+			# if(!item || !item.Id) continue; #
+			<a href="@Url.Action(MVC.AwbFile.Download())/#=item.Id#">#= item.Name #</a>
+			# } #
 		</p>
 		# } #
-		# if(GTDFileName != null){ #
+		# if(GTDFiles != null){ #
 		<p>
 			<span>@Entities.GTD:</span>
-			<a href="@Url.Action(MVC.AwbFile.GTD())/#= Id #">#= GTDFileName #</a>
+			# for(i in GTDFiles) { #
+			# var item = GTDFiles[i]; #
+			# if(!item || !item.Id) continue; #
+			<a href="@Url.Action(MVC.AwbFile.Download())/#=item.Id#">#= item.Name #</a>
+			# } #
 		</p>
 		# } #
-		# if(GTDAdditionalFileName != null){ #
+		# if(GTDAdditionalFiles != null){ #
 		<p>
 			<span>@Entities.GTDAdditional:</span>
-			<a href="@Url.Action(MVC.AwbFile.GTDAdditional())/#= Id #">#= GTDAdditionalFileName #</a>
+			# for(i in GTDAdditionalFiles) { #
+			# var item = GTDAdditionalFiles[i]; #
+			# if(!item || !item.Id) continue; #
+			<a href="@Url.Action(MVC.AwbFile.Download())/#=item.Id#">#= item.Name #</a>
+			# } #
 		</p>
 		# } #
-		# if(PackingFileName != null){ #
+		# if(PackingFiles != null){ #
 		<p>
 			<span>@Entities.Packing:</span>
-			<a href="@Url.Action(MVC.AwbFile.Packing())/#= Id #">#= PackingFileName #</a>
+			# for(i in PackingFiles) { #
+			# var item = PackingFiles[i]; #
+			# if(!item || !item.Id) continue; #
+			<a href="@Url.Action(MVC.AwbFile.Download())/#=item.Id#">#= item.Name #</a>
+			# } #
 		</p>
 		# } #
-		# if(AWBFileName != null){ #
+		# if(InvoiceFiles != null){ #
 		<p>
 			<span>@Entities.AWB:</span>
-			<a href="@Url.Action(MVC.AwbFile.AWB())/#= Id #">#= AWBFileName #</a>
+			# for(i in InvoiceFiles) { #
+			# var item = InvoiceFiles[i]; #
+			# if(!item || !item.Id) continue; #
+			<a href="@Url.Action(MVC.AwbFile.Download())/#=item.Id#">#= item.Name #</a>
+			# } #
 		</p>
 		# } #
-		# if(DrawFileName != null){ #
+		# if(DrawFiles != null){ #
 		<p>
 			<span>@Entities.Draw:</span>
-			<a href="@Url.Action(MVC.AwbFile.Draw())/#= Id #">#= DrawFileName #</a>
+			# for(i in DrawFiles) { #
+			# var item = DrawFiles[i]; #
+			# if(!item || !item.Id) continue; #
+			<a href="@Url.Action(MVC.AwbFile.Download())/#=item.Id#">#= item.Name #</a>
+			# } #
+		</p>
+		# } #
+		# if(OtherFiles != null){ #
+		<p>
+			<span>@Entities.OtherFiles:</span>
+			# for(i in OtherFiles) { #
+			# var item = OtherFiles[i]; #
+			# if(!item || !item.Id) continue; #
+			<a href="@Url.Action(MVC.AwbFile.Download())/#=item.Id#">#= item.Name #</a>
+			# } #
 		</p>
 		# } #
 	</div>
