--- a/Alicargo/Views/AirWaybill/AdminDetails.cshtml
+++ b/Alicargo/Views/AirWaybill/AdminDetails.cshtml
@@ -9,7 +9,7 @@
 			# for(i in AWBFiles) { #
 			# var item = AWBFiles[i]; #
 			# if(!item || !item.Id) continue; #
-			<a href="@Url.Action(MVC.AwbFile.Download())/#=item.Id#">#= item.Name #</a>
+			<a href="@Url.Action(MVC.AwbFiles.Download())/#=item.Id#">#= item.Name #</a>
 			# } #
 		</p>
 		# } #
@@ -19,7 +19,7 @@
 			# for(i in GTDFiles) { #
 			# var item = GTDFiles[i]; #
 			# if(!item || !item.Id) continue; #
-			<a href="@Url.Action(MVC.AwbFile.Download())/#=item.Id#">#= item.Name #</a>
+			<a href="@Url.Action(MVC.AwbFiles.Download())/#=item.Id#">#= item.Name #</a>
 			# } #
 		</p>
 		# } #
@@ -29,7 +29,7 @@
 			# for(i in GTDAdditionalFiles) { #
 			# var item = GTDAdditionalFiles[i]; #
 			# if(!item || !item.Id) continue; #
-			<a href="@Url.Action(MVC.AwbFile.Download())/#=item.Id#">#= item.Name #</a>
+			<a href="@Url.Action(MVC.AwbFiles.Download())/#=item.Id#">#= item.Name #</a>
 			# } #
 		</p>
 		# } #
@@ -39,7 +39,7 @@
 			# for(i in PackingFiles) { #
 			# var item = PackingFiles[i]; #
 			# if(!item || !item.Id) continue; #
-			<a href="@Url.Action(MVC.AwbFile.Download())/#=item.Id#">#= item.Name #</a>
+			<a href="@Url.Action(MVC.AwbFiles.Download())/#=item.Id#">#= item.Name #</a>
 			# } #
 		</p>
 		# } #
@@ -49,7 +49,7 @@
 			# for(i in InvoiceFiles) { #
 			# var item = InvoiceFiles[i]; #
 			# if(!item || !item.Id) continue; #
-			<a href="@Url.Action(MVC.AwbFile.Download())/#=item.Id#">#= item.Name #</a>
+			<a href="@Url.Action(MVC.AwbFiles.Download())/#=item.Id#">#= item.Name #</a>
 			# } #
 		</p>
 		# } #
@@ -59,7 +59,7 @@
 			# for(i in DrawFiles) { #
 			# var item = DrawFiles[i]; #
 			# if(!item || !item.Id) continue; #
-			<a href="@Url.Action(MVC.AwbFile.Download())/#=item.Id#">#= item.Name #</a>
+			<a href="@Url.Action(MVC.AwbFiles.Download())/#=item.Id#">#= item.Name #</a>
 			# } #
 		</p>
 		# } #
@@ -69,7 +69,7 @@
 			# for(i in OtherFiles) { #
 			# var item = OtherFiles[i]; #
 			# if(!item || !item.Id) continue; #
-			<a href="@Url.Action(MVC.AwbFile.Download())/#=item.Id#">#= item.Name #</a>
+			<a href="@Url.Action(MVC.AwbFiles.Download())/#=item.Id#">#= item.Name #</a>
 			# } #
 		</p>
 		# } #
