--- a/Alicargo/Views/AdminAwb/Edit.cshtml
+++ b/Alicargo/Views/AdminAwb/Edit.cshtml
@@ -5,5 +5,6 @@
 	<h1>
 		@Pages.AirWaybillEdit
 	</h1>
-	@Html.EditPage(Url.Action(MVC.AdminAwb.Edit()), Pages.Save, @Html.Partial("EditButtons", (long)ViewBag.AwbId))
+	@Html.EditPage(Url.Action(MVC.AdminAwb.Edit()), Pages.Save,
+		@Html.Partial("EditButtons", (long)ViewBag.AwbId))
 </div>
