--- a/Alicargo/Views/AwbFiles/Admin.cshtml
+++ b/Alicargo/Views/AwbFiles/Admin.cshtml
@@ -3,7 +3,7 @@
 @using Resources
 <div class="container-edit">
 	<h1>
-		@Pages.AirWaybills @ViewBag.AwbId
+		@ViewBag.Awb
 	</h1>
 	<div class="row">
 		<div class="span3">
