--- a/Alicargo/Views/AirWaybill/BrokerDetails.cshtml
+++ b/Alicargo/Views/AirWaybill/BrokerDetails.cshtml
@@ -35,7 +35,7 @@
 		# } #
 		# if(InvoiceFiles != null){ #
 		<p>
-			<span>@Entities.AWB:</span>
+			<span>@Entities.Invoice:</span>
 			# for(i in InvoiceFiles) { #
 			# var item = InvoiceFiles[i]; #
 			# if(!item || !item.Id) continue; #
