--- a/Alicargo/Views/AirWaybill/SenderDetails.cshtml
+++ b/Alicargo/Views/AirWaybill/SenderDetails.cshtml
@@ -5,7 +5,7 @@
 	<div class="properties">
 		# if(AWBFiles != null){ #
 		<p>
-			<span>@Entities.Invoice:</span>
+			<span>@Entities.AWB:</span>
 			# for(i in AWBFiles) { #
 			# var item = AWBFiles[i]; #
 			# if(!item || !item.Id) continue; #
